# markdown_doc

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  check.bat  check.py  check.sh  pyproject.toml  requirements.txt  setup.cfg  test.dockerfile
.github/workflows/: main.yml
markdown_doc/: __init__.py  __main__.py  argparse_action.py  docstring.py  generator.py  import_util.py  resolver.py
sample/: __init__.py  auxiliary.py  enumeration.py  example.py
