[metadata]
name = python-markdown-doc
version = attr: markdown_doc.__version__
description = Generate Markdown documentation from Python code
author = Levente Hunyadi
author_email = hunyadi@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Documentation :: Sphinx
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    json_strong_typing

[options.package_data]
markdown_doc =
    py.typed
